fixed spacing issues - added image option - still tweaking image

--- a/src/App.css
+++ b/src/App.css
@@ -6,14 +6,14 @@ body {
   text-align: center;
 }
 .container {
-  max-width: 900px;
-  margin: 1rem, 2rem;
+  max-width: 1400px;
+  margin: 2rem, 3rem;
 }
 .card-grid {
   display: grid;
-  align-items: center;
+  justify-content: center;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: .5rem;
+  gap: 1rem;
   
 }
 .card {
